<resources>
    <string name="app_name">RelativeLayout1</string>
    <string name="stri1">1</string>
    <string name="stri2">2</string>
    <string name="stri3">3</string>
    <string name="stri4">4</string>
    <string name="stric">center</string>
    <string name="stri5">5</string>
    <string name="stri7">7</string>
    <string name="stri8">8</string>
    <string name="stri6">6</string>
</resources>
