<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.alex.relativelayout1.MainActivity">


    <!-- alinerar a la izquierda de la pantalla-->
    <TextView
        android:id="@+id/txt_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stri1"
        android:padding="10dp"
        android:background="@color/colorAccent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        />
    <!-- alinerar al centro de la pantalla-->
    <TextView
        android:id="@+id/txt_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stri2"
        android:padding="10dp"
        android:background="@color/colorAccent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/txt_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stri3"
        android:padding="10dp"
        android:background="@color/colorAccent"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        />

    <TextView
        android:id="@+id/txt_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stri4"
        android:padding="10dp"
        android:background="@color/colorPrimary"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true"
        />

    <TextView
        android:id="@+id/txt_centro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stric"
        android:padding="10dp"
        android:background="@color/colorPrimary"
        android:layout_centerInParent="true"

        />
    <TextView
        android:id="@+id/txt_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stri5"
        android:padding="10dp"
        android:background="@color/colorPrimary"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"

        />

    <TextView
        android:id="@+id/txt_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stri7"
        android:padding="10dp"
        android:background="@color/colorPrimaryDark"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"

        />

    <TextView
        android:id="@+id/txt_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stri8"
        android:padding="10dp"
        android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        />

    <TextView
        android:id="@+id/txt_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stri6"
        android:padding="10dp"
        android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        />
    
</RelativeLayout>
